added video citation

--- a/midterm/style.css
+++ b/midterm/style.css
@@ -26,7 +26,8 @@ body{
 
 }
 
-/* this styles the video */
+/* this styles the video 
+video source: https://www.pexels.com/video/satellite-docking-in-a-space-shuttle-854223/*/
 #space{
     width: 100vw; 
     height: 100vh; 
