--- a/220-final/style.css
+++ b/220-final/style.css
@@ -2,6 +2,8 @@
     background-color: #fff;
     overflow-x: auto;
     overflow-y: hidden; 
+    position: absolute; 
+    top: 0px;
     
 }
 
@@ -144,7 +146,7 @@ nav{
     top: 12px; 
     left: 24px;
     width: 95%;
-    height: 72px;
+    height: 64px;
     align-items: end;
     border-top: 0px solid; 
     border-bottom: 5px solid  #008786; 
@@ -152,20 +154,15 @@ nav{
     border-right: 0px solid;
     border-end-end-radius: 5px;
     z-index: 10;
+    padding: 0px;
     
 }
 
 
 
-nav > button { 
-    height: 72px; 
-    padding: 12px; 
-    background-color: transparent;
-    border: 0px solid;
-    margin: 0 auto; 
-}
 
-nav > button > a, a:visited, a:hover  {
+nav > button  {
+    background-color: transparent;
     color: #008786;
     text-align: center;
     font-family: Nunito;
@@ -175,22 +172,18 @@ nav > button > a, a:visited, a:hover  {
     line-height: normal;
     letter-spacing: 3.6px;
     text-decoration: none;
+    border: 0px solid;
+    margin-right: 24px;
+    padding: 0px 12px;
 }
 
-nav > button> a:active {
-    height: 72px; 
-    padding: 12px; 
+.active { 
     background-color: #008786;
     color: white;
-    text-align: center;
-    font-family: Nunito;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: normal;
-    letter-spacing: 3.6px;
-    border-radius: 15px 15px 0px 0px; 
+    border-radius: 15px 15px 15px 15px;
+    padding: 0px 12px; 
 }
+
 
 
 nav > span{
@@ -204,11 +197,10 @@ nav > span{
     font-weight: 800;
     line-height: normal;
     letter-spacing: 3.6px;
-    padding: 12px; 
 
 }
 
-section{
+.container > section{
     position: relative; 
     top: 100px; 
     width: 100vw;
@@ -220,12 +212,14 @@ section{
 
 
 
+
 /* center the summary of 'good [blank]' and the time/weather in the middle */
+
 
 #summaryContainer{
 
     margin: 0;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
@@ -279,15 +273,9 @@ section{
 
 /* weather screen */ 
 
-#weatherTab{
-    position: relative; 
-    top: 100px;
-    width: 250px;
-}
+
 
 .weather{
-    position: relative; 
-    top: 100px;
     width: 100%; 
     height: 100%; 
     display: grid; 
@@ -298,9 +286,8 @@ section{
 
 
 .weather > div { 
-    position: relative; 
-    top: 100px;
-    height: 90%;
+    
+    height: 85%;
     border-radius: 15px;
     background: rgba(255, 255, 255, 0.75);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
