--- a/AME220/dom-example/style.css
+++ b/AME220/dom-example/style.css
@@ -3,8 +3,6 @@
 body { 
     background-color: black;
     color: white;
-    overflow-y: hidden;
-    overflow-x: hidden; 
 }
 
 .container{ 
@@ -109,6 +107,12 @@ input[type="text"]{
     font-weight: 400;
     line-height: normal;
 }
+
+input[type="text"]:focus{
+    background-color: white; 
+    color: black; 
+}
+
 
 #generate{
     background-color:white;
